Image drag and drop input works, saving images to contact in the database.

--- a/mailbag/client/src/css/main.css
+++ b/mailbag/client/src/css/main.css
@@ -62,3 +62,8 @@
 .messageInfoField {
   color : #000000!important;
 }
+
+.dragImageBox {
+  border: 1px solid rgba(0, 0, 0, 0.28);
+  border-radius: 4px;
+}
